# nh

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  darwin-module.nix  default.nix  devshell.nix  fix.sh  flake.nix  module.nix  package.nix  pyproject.toml  setup.py  shell.nix  test.nix
.github/: FUNDING.yaml
.github/workflows/: build.yaml  build.yaml.disabled  cleanup.yaml  tag.yaml  update.yaml
doc/: 00_README.md  01_README.md  02_README.md
nh/: __init__.py  __main__.py  commands.py  deps.py  exceptions.py  repl.nix  utils.py
src/: clean.rs  cli.rs  commands.rs  completion.rs  darwin.rs  generations.rs  home.rs  installable.rs  installables.rs  interface.rs  json.rs  logging.rs  machine.rs  main.rs  nixos.rs  repl.rs  search.rs  update.rs  util.rs
src/lib/: main.rs  version.rs
test/: configuration.nix  home.nix  nixos.nix
