[package]
name = "nh"
version = "3.4.15"
edition = "2021"
license = "EUPL-1.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambassador = "0.3.5"
anstyle = "1.0.0"
clap = { version = "4.0", features = [
    "cargo",
    "color",
    "derive",
    "env",
    "unstable-styles",
] }
clap_complete = "4.0"
clean-path = "0.2"
color-eyre = { version = "0.6.2", default-features = false, features = [
    "track-caller",
] }
derive_builder = "0.12.0"
dialoguer = { version = "0.10.2", default-features = false }
elasticsearch-dsl = "0.4.19"
hostname = "^0.3"
humantime = "2.1.0"
nix = { version = "0.26.2", default-features = false, features = [
    "fs",
    "user",
] }
once_cell = "1.18.0"
owo-colors = "3.5.0"
regex = "1.8.4"
reqwest = { version = "0.11.23", features = ["rustls-tls", "blocking", "json"], default-features = false }
serde = { version = "1.0.166", features = [
    "derive",
] }
serde_json = "1.0.100"
subprocess = "0.2"
tempfile = "3.5.0"
textwrap = { version = "0.16.0", features = ["terminal_size"] }
thiserror = "1.0"
timeago = { version = "0.4.1", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
] }
uzers = { version = "0.11.3", default-features = false }
