[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "nh"
version = "1.4.0"
description = "My package description"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["nix", "cli", "helper"]
license = { text = "MIT" }
dependencies = [
    "xdg",
    "diskcache",
    "colorama",
    "pyfzf",
    "dateparser",
    "click",
]

[project.scripts]
nh = "nh.commands:cli"
